syntax = "proto3";
package netty;
option java_package="com.netty.d_protobuf_self.proto";
option java_outer_classname="SubscribeRespProto";

message SubscribeResp{
	 string subReqID=1;
	 int32 reqCode=2;
	 string  subscribe=3;
}